--- a/_posts/2021-05-05-test.md
+++ b/_posts/2021-05-05-test.md
@@ -7,9 +7,8 @@ author:     BY
 header-img: img/post-bg-ios9-web.jpg
 catalog: true
 tags:
-    - Obj-C
-    - Runtime
-    - iOS
+    - Python
+    - Machine Learing
 ---
 
 # 标题
