--- a/_posts/2021-05-05-test.md
+++ b/_posts/2021-05-05-test.md
@@ -3,7 +3,7 @@ layout:     post
 title:      test
 subtitle:   测
 date:       2017-02-04
-author:     BY
+author:     BB
 header-img: img/post-bg-ios9-web.jpg
 catalog: true
 tags:
