--- a/_posts/Python/2020-11-02-Python解释器.md
+++ b/_posts/Python/2020-11-02-Python解释器.md
@@ -36,7 +36,7 @@ Python解释器作用：运行文件
 
 [单击上述链接] -- 查找目标文件：Windows x86-64 executable installer -- 单击即可下载。
 
-![image-20190110170855787](../../img/image-20190110170855787.png)
+![image-20190122112451519.png](https://www.hualigs.cn/image/6093922926906.jpg)
 
 
 
