--- a/_posts/Python/2020-11-01-Python简介.md
+++ b/_posts/Python/2020-11-01-Python简介.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      python简介12345
+title:      01python简介
 subtitle:   python
 date:       2020-05-05
 author:     BB
