--- a/_posts/01Python/2020-11-04-注释.md
+++ b/_posts/01Python/2020-11-04-注释.md
@@ -22,11 +22,11 @@ tags:
 
 - 没有注释的代码
 
-![](![01without.png](https://www.hualigs.cn/image/6093d29944ad9.jpg))
+![01without.png](https://www.hualigs.cn/image/6093d29944ad9.jpg)
 
 - 添加注释的代码
 
-![](![02annotation.png](https://www.hualigs.cn/image/6093d299ed637.jpg))
+![02annotation.png](https://www.hualigs.cn/image/6093d299ed637.jpg)
 
 > - 通过用自己熟悉的语言，在程序中对某些代码进行标注说明，这就是注释的作用，能够大大增强程序的可读性。
 
