--- a/_posts/01Python/2020-11-01-Python简介.md
+++ b/_posts/01Python/2020-11-01-Python简介.md
@@ -4,7 +4,7 @@ title:      01python简介
 subtitle:   python
 date:       2020-05-05
 author:     BB
-header-img: img/post-bg-ios9-web.jpg
+header-img: img/python.jpg
 catalog: true
 tags:
     - Python
