--- a/_posts/01Python/2020-11-02-Python解释器.md
+++ b/_posts/01Python/2020-11-02-Python解释器.md
@@ -4,7 +4,7 @@ title:      02python解释器
 subtitle:   python
 date:       2020-05-06
 author:     BB
-header-img: img/post-bg-ios9-web.jpg
+header-img: img/python.jpg
 catalog: true
 tags:
     - python
