--- a/_posts/01Python/2020-11-03-pycharm.md
+++ b/_posts/01Python/2020-11-03-pycharm.md
@@ -4,7 +4,7 @@ title:      03pycharm
 subtitle:   python
 date:       2020-05-07
 author:     BB
-header-img: img/post-bg-ios9-web.jpg
+header-img: img/python.jpg
 catalog: true
 tags:
     - python
