--- a/_posts/01Python/2020-11-04-注释.md
+++ b/_posts/01Python/2020-11-04-注释.md
@@ -4,7 +4,7 @@ title:      04注释
 subtitle:   python
 date:       2020-05-08
 author:     BB
-header-img: img/post-bg-ios9-web.jpg
+header-img: img/python.jpg
 catalog: true
 tags:
     - python
