--- a/_posts/01Python/2020-11-05-变量.md
+++ b/_posts/01Python/2020-11-05-变量.md
@@ -4,7 +4,7 @@ title:      05变量
 subtitle:   python
 date:       2020-05-09
 author:     BB
-header-img: img/post-bg-ios9-web.jpg
+header-img: img/python.jpg
 catalog: true
 tags:
     - python
