--- a/_posts/01Python/2020-11-06-输出.md
+++ b/_posts/01Python/2020-11-06-输出.md
@@ -4,7 +4,7 @@ title:      06输出
 subtitle:   python
 date:       2020-05-10
 author:     BB
-header-img: img/post-bg-ios9-web.jpg
+header-img: img/python.jpg
 catalog: true
 tags:
     - python
