--- a/_posts/01Python/2020-11-08-转换数据类型.md
+++ b/_posts/01Python/2020-11-08-转换数据类型.md
@@ -4,7 +4,7 @@ title:      08转换数据类型
 subtitle:   python
 date:       2020-05-12
 author:     BB
-header-img: img/post-bg-ios9-web.jpg
+header-img: img/python.jpg
 catalog: true
 tags:
     - python
