--- a/_posts/01Python/2020-11-09-运算符.md
+++ b/_posts/01Python/2020-11-09-运算符.md
@@ -4,7 +4,7 @@ title:      09运算符
 subtitle:   python
 date:       2020-05-13
 author:     BB
-header-img: img/post-bg-ios9-web.jpg
+header-img: img/python.jpg
 catalog: true
 tags:
     - python
