--- a/_posts/01Python/2020-11-10-条件语句.md
+++ b/_posts/01Python/2020-11-10-条件语句.md
@@ -4,7 +4,7 @@ title:      10条件语句
 subtitle:   python
 date:       2020-05-14
 author:     BB
-header-img: https://www.hualigs.cn/image/6093f3ff6f7bb.jpg
+header-img: <a href="https://www.hualigs.cn/info/6093f4030f9b6" target="_blank"><img src="https://www.hualigs.cn/image/6093f4030f9b6.jpg" alt="python.jpg"></a>
 catalog: true
 tags:
     - python
