--- a/_posts/01Python/2020-11-13-列表.md
+++ b/_posts/01Python/2020-11-13-列表.md
@@ -1,14 +1,14 @@
 ---
 layout:     post
-title:      12循环
+title:      13列表
 subtitle:   python
-date:       2020-05-16
+date:       2020-05-17
 author:     BB
 header-img: img/python.jpg
 catalog: true
 tags:
     - python
-    - str
+    - list
 ---
 
 
