--- a/_posts/01Python/2020-11-02-Python解释器.md
+++ b/_posts/01Python/2020-11-02-Python解释器.md
@@ -1,14 +1,13 @@
 ---
 layout:     post
-title:      02python解释器
-subtitle:   python
+title:      Python基础入门
+subtitle:   python解释器
 date:       2020-05-06
 author:     BB
 header-img: img/python.jpg
 catalog: true
 tags:
     - python
-    - 解释器
 ---
 
 # 目标
