--- a/_posts/01Python/2020-11-03-pycharm.md
+++ b/_posts/01Python/2020-11-03-pycharm.md
@@ -1,14 +1,13 @@
 ---
 layout:     post
-title:      03pycharm
-subtitle:   python
+title:      Python基础入门
+subtitle:   pycharm
 date:       2020-05-07
 author:     BB
 header-img: img/python.jpg
 catalog: true
 tags:
     - python
-    - Pycharm
 ---
 
 # 课程：PyCharm
