--- a/_posts/01Python/2020-11-10-条件语句.md
+++ b/_posts/01Python/2020-11-10-条件语句.md
@@ -1,14 +1,13 @@
 ---
 layout:     post
-title:      10条件语句
-subtitle:   python
+title:      流程控制
+subtitle:   条件语句
 date:       2020-05-14
 author:     BB
 header-img: img/python.jpg
 catalog: true
 tags:
     - python
-    - operator
 ---
 
 
