--- a/_posts/01Python/2020-11-11-循环.md
+++ b/_posts/01Python/2020-11-11-循环.md
@@ -1,15 +1,13 @@
 ---
 layout:     post
-title:      11循环
-subtitle:   python
+title:      流程控制
+subtitle:   循环
 date:       2020-05-15
 author:     BB
 header-img: img/python.jpg
 catalog: true
 tags:
     - python
-    - while
-    - for
 ---
 
 # 目标
