--- a/_posts/01Python/2020-11-12-字符串.md
+++ b/_posts/01Python/2020-11-12-字符串.md
@@ -1,14 +1,13 @@
 ---
 layout:     post
-title:      12循环
-subtitle:   python
+title:      数据序列(容器)
+subtitle:   字符串str
 date:       2020-05-16
 author:     BB
 header-img: img/python.jpg
 catalog: true
 tags:
     - python
-    - str
 ---
 
 
