--- a/_posts/01Python/2020-11-13-列表.md
+++ b/_posts/01Python/2020-11-13-列表.md
@@ -1,14 +1,13 @@
 ---
 layout:     post
-title:      13列表
-subtitle:   python
+title:      数据序列(容器)
+subtitle:   列表list
 date:       2020-05-17
 author:     BB
 header-img: img/python.jpg
 catalog: true
 tags:
     - python
-    - list
 ---
 
 
