--- a/_posts/01Python/2020-11-14-元组.md
+++ b/_posts/01Python/2020-11-14-元组.md
@@ -1,14 +1,13 @@
 ---
 layout:     post
-title:      14元组
-subtitle:   python
+title:      数据序列(容器)
+subtitle:   元组tuple
 date:       2020-05-18
 author:     BB
 header-img: img/python.jpg
 catalog: true
 tags:
     - python
-    - tuple
 ---
 
 
