--- a/_posts/01Python/2020-11-01-Python简介.md
+++ b/_posts/01Python/2020-11-01-Python简介.md
@@ -1,13 +1,13 @@
 ---
 layout:     post
-title:      01python简介
-subtitle:   python
+title:      Python基础入门
+subtitle:   python简介
 date:       2020-05-05
 author:     BB
 header-img: img/python.jpg
 catalog: true
 tags:
-    - Python
+    - python
 ---
 
 # 目标
