--- a/_posts/01Python/2020-11-04-注释.md
+++ b/_posts/01Python/2020-11-04-注释.md
@@ -1,14 +1,13 @@
 ---
 layout:     post
-title:      04注释
-subtitle:   python
+title:      Python基础入门
+subtitle:   注释
 date:       2020-05-08
 author:     BB
 header-img: img/python.jpg
 catalog: true
 tags:
     - python
-    - annotation
 ---
 
 
