--- a/_posts/01Python/2020-11-05-变量.md
+++ b/_posts/01Python/2020-11-05-变量.md
@@ -1,14 +1,13 @@
 ---
 layout:     post
-title:      05变量
-subtitle:   python
+title:      Python基础入门
+subtitle:   变量
 date:       2020-05-09
 author:     BB
 header-img: img/python.jpg
 catalog: true
 tags:
     - python
-    - variable
 ---
 
 
