--- a/_posts/01Python/2020-11-06-输出.md
+++ b/_posts/01Python/2020-11-06-输出.md
@@ -1,14 +1,13 @@
 ---
 layout:     post
-title:      06输出
-subtitle:   python
+title:      Python基础入门
+subtitle:   输出
 date:       2020-05-10
 author:     BB
 header-img: img/python.jpg
 catalog: true
 tags:
     - python
-    - print
 ---
 
 
