--- a/_posts/01Python/2020-11-07-输入.md
+++ b/_posts/01Python/2020-11-07-输入.md
@@ -1,14 +1,13 @@
 ---
 layout:     post
-title:      07输入
-subtitle:   python
+title:      Python基础入门
+subtitle:   输入
 date:       2020-05-11
 author:     BB
 header-img: img/python.jpg
 catalog: true
 tags:
     - python
-    - input
 ---
 
 
