--- a/_posts/01Python/2020-11-08-转换数据类型.md
+++ b/_posts/01Python/2020-11-08-转换数据类型.md
@@ -1,14 +1,13 @@
 ---
 layout:     post
-title:      08转换数据类型
-subtitle:   python
+title:      Python基础入门
+subtitle:   转换数据类型
 date:       2020-05-12
 author:     BB
 header-img: img/python.jpg
 catalog: true
 tags:
     - python
-    - dataType
 ---
 
 # 目标
