--- a/_posts/01Python/2020-11-09-运算符.md
+++ b/_posts/01Python/2020-11-09-运算符.md
@@ -1,14 +1,13 @@
 ---
 layout:     post
-title:      09运算符
-subtitle:   python
+title:      Python基础入门
+subtitle:   运算符
 date:       2020-05-13
 author:     BB
 header-img: img/python.jpg
 catalog: true
 tags:
     - python
-    - operator
 ---
 
 
