--- a/_posts/01Python/2020-11-01-Python简介.md
+++ b/_posts/01Python/2020-11-01-Python简介.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      Python基础入门
+title:      Python基础入门(一)
 subtitle:   python简介
 date:       2020-05-05
 author:     BB
