--- a/_posts/01Python/2020-11-02-Python解释器.md
+++ b/_posts/01Python/2020-11-02-Python解释器.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      Python基础入门
+title:      Python基础入门(二)
 subtitle:   python解释器
 date:       2020-05-06
 author:     BB
