--- a/_posts/01Python/2020-11-03-pycharm.md
+++ b/_posts/01Python/2020-11-03-pycharm.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      Python基础入门
+title:      Python基础入门(三)
 subtitle:   pycharm
 date:       2020-05-07
 author:     BB
