--- a/_posts/01Python/2020-11-08-转换数据类型.md
+++ b/_posts/01Python/2020-11-08-转换数据类型.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      Python基础入门
+title:      Python基础入门(八)
 subtitle:   转换数据类型
 date:       2020-05-12
 author:     BB
