--- a/_posts/02Linux/2020-12-01-Linux简介.md
+++ b/_posts/02Linux/2020-12-01-Linux简介.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      Linux
-subtitle:   Linux简介
+title:      Linux简介
+subtitle:   操作系统
 date:       2020-06-01
 author:     BB
 header-img: img/linux.jpg
