--- a/_posts/02Linux/2020-12-02-Linux基础命令.md
+++ b/_posts/02Linux/2020-12-02-Linux基础命令.md
@@ -1,8 +1,8 @@
 ---
 layout:     post
-title:      Linux简介
-subtitle:   操作系统
-date:       2020-06-01
+title:      Linux基础命令
+subtitle:   目录-文件
+date:       2020-06-02
 author:     BB
 header-img: img/linux.jpg
 catalog: true
@@ -23,10 +23,10 @@ tags:
 
 ### 1.1 查看目录命令的使用 
 
-  命令   说明
------- ------------------------
-  ls     查看当前目录信息
-  tree   以树状方式显示目录信息
+| 命令 | 说明                   |
+| --- | --------------------- |
+| ls   | 查看当前目录信息       |
+| tree | 以树状方式显示目录信息 |
 
 **ls命令效果图:**
 
@@ -38,9 +38,9 @@ tags:
 
 ### 1.2 查看当前目录路径 
 
-  命令   说明
------- ------------------
-  pwd    查看当前目录路径
+| 命令 | 说明             |
+| ---- | ---------------- |
+| pwd  | 查看当前目录路径 |
 
 **pwd命令效果图:**
 
@@ -48,9 +48,9 @@ tags:
 
 ### 1.3 清除终端内容 
 
-  命令    说明
-------- --------------
-  clear   清除终端内容
+| 命令  | 说明         |
+| ----- | ------------ |
+| clear | 清除终端内容 |
 
 **pwd命令效果图:**
 
@@ -78,13 +78,13 @@ tags:
 
 ### 2.1 切换目录命令的使用 
 
-  命令      说明
---------- ------------------------
-  cd 目录   切换到指定目录
-  cd \~     切换到当前用户的主目录
-  cd ..     切换到上一级目录
-  cd .      切换到当前目录
-  cd -      切换到上一次目录
+| 命令  | 说明                   |
+| ----- | ---------------------- |
+| cd    | 目录   切换到指定目录  |
+| cd \~ | 切换到当前用户的主目录 |
+| cd .. | 切换到上一级目录       |
+| cd .  | 切换到当前目录         |
+| cd -  | 切换到上一次目录       |
 
 **注意:**
 
@@ -185,12 +185,12 @@ tags:
 
 ### 4.1 创建、删除文件及目录命令的使用 
 
-  命令                  说明
---------------------- ----------------------
-  touch 文件名          创建指定文件
-  mkdir 目录名          创建目录(文件夹)
-  rm 文件名或者目录名   删除指定文件或者目录
-  rmdir 目录名          删除空目录
+| 命令                | 说明                 |
+| ------------------- | -------------------- |
+| touch 文件名        | 创建指定文件         |
+| mkdir 目录名        | 创建目录(文件夹)     |
+| rm 文件名或者目录名 | 删除指定文件或者目录 |
+| rmdir 目录名        | 删除空目录           |
 
 **touch命令效果图:**
 
@@ -241,10 +241,10 @@ tags:
 
 ### 5.1 复制、移动文件及目录命令的使用 
 
-  命令   说明
------- ----------------------------
-  cp     拷贝文件、拷贝目录
-  mv     移动文件、移动目录、重命名
+| 命令 | 说明                       |
+| ---- | -------------------------- |
+| cp   | 拷贝文件、拷贝目录         |
+| mv   | 移动文件、移动目录、重命名 |
 
 **cp命令效果图:**
 
