--- a/_posts/02Linux/2020-12-03-Linux命令帮助选项.md
+++ b/_posts/02Linux/2020-12-03-Linux命令帮助选项.md
@@ -74,7 +74,8 @@ tags:
 
 **man效果图:**
 
-![help](ihttps://www.hualigs.cn/image/609633fccb364.jpg)
+![help](https://www.hualigs.cn/image/609633fccb364.jpg)
+
 
 **man命令的说明:**
 
