--- a/_posts/02Linux/2020-12-04-Linux高级命令.md
+++ b/_posts/02Linux/2020-12-04-Linux高级命令.md
@@ -104,7 +104,7 @@ tags:
 
 ### 2.2 管道(|)命令的使用 
 
-管道(|)：一个命令的输出可以通过管道做为另一个命令的输入，可以理解成是一个容器，存放在终端显示的内容。
+管道(\|)：一个命令的输出可以通过管道做为另一个命令的输入，可以理解成是一个容器，存放在终端显示的内容。
 
 **管道命令的效果图:**
 
@@ -112,7 +112,7 @@ tags:
 
 **说明:**
 
-管道(|)一般结合 more 命令使用，主要是分配查看终端显示内容。
+管道(\|)一般结合 more 命令使用，主要是分配查看终端显示内容。
 
 ### 2.3 小结 
 
