--- a/_posts/02Linux/2020-12-04-Linux高级命令.md
+++ b/_posts/02Linux/2020-12-04-Linux高级命令.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      Linux高级命令
+title:      Linux高级命令(一)
 subtitle:   重定向-链接-查找
 date:       2020-06-04
 author:     BB
