--- a/_posts/03Multitasking/2021-01-02-进程的介绍.md
+++ b/_posts/03Multitasking/2021-01-02-进程的介绍.md
@@ -1,3 +1,19 @@
+---
+layout:     post
+title:      多任务编程
+subtitle:   进程的介绍
+date:       2021-01-02
+author:     BB
+header-img: img/pythonPro.jpg
+catalog: true
+tags:
+    - python
+    - multitasking
+    - process
+---
+
+
+
 进程
 ====
 
