--- a/_posts/03Multitasking/2021-01-03-多进程使用.md
+++ b/_posts/03Multitasking/2021-01-03-多进程使用.md
@@ -1,3 +1,19 @@
+---
+layout:     post
+title:      多任务编程
+subtitle:   多进程使用
+date:       2021-01-03
+author:     BB
+header-img: img/pythonPro.jpg
+catalog: true
+tags:
+    - python
+    - multitasking
+    - process
+---
+
+
+
 多进程的使用
 ============
 
