--- a/_posts/03Multitasking/2021-01-07-线程的介绍.md
+++ b/_posts/03Multitasking/2021-01-07-线程的介绍.md
@@ -1,3 +1,17 @@
+---
+layout:     post
+title:      多任务编程
+subtitle:   线程的介绍
+date:       2021-01-07
+author:     BB
+header-img: img/pythonPro.jpg
+catalog: true
+tags:
+    - python
+    - multitasking
+    - thread
+---
+
 线程
 ====
 
