--- a/_posts/03Multitasking/2021-01-08-多线程使用.md
+++ b/_posts/03Multitasking/2021-01-08-多线程使用.md
@@ -1,3 +1,19 @@
+---
+layout:     post
+title:      多任务编程
+subtitle:   多线程的使用
+date:       2021-01-08
+author:     BB
+header-img: img/pythonPro.jpg
+catalog: true
+tags:
+    - python
+    - multitasking
+    - thread
+---
+
+
+
 多线程的使用
 ============
 
