--- a/_posts/03Multitasking/2021-01-09-线程执行带有参数的任务.md
+++ b/_posts/03Multitasking/2021-01-09-线程执行带有参数的任务.md
@@ -1,3 +1,19 @@
+---
+layout:     post
+title:      多任务编程
+subtitle:   带参数的任务
+date:       2021-01-09
+author:     BB
+header-img: img/pythonPro.jpg
+catalog: true
+tags:
+    - python
+    - multitasking
+    - thread
+---
+
+
+
 线程执行带有参数的任务
 ======================
 
