--- a/_posts/03Multitasking/2021-01-12-死锁.md
+++ b/_posts/03Multitasking/2021-01-12-死锁.md
@@ -1,3 +1,18 @@
+---
+layout:     post
+title:      多任务编程
+subtitle:   死锁
+date:       2021-01-12
+author:     BB
+header-img: img/pythonPro.jpg
+catalog: true
+tags:
+    - python
+    - multitasking
+---
+
+
+
 死锁
 ====
 
