--- a/_posts/03Multitasking/2021-01-13-进程和线程对比.md
+++ b/_posts/03Multitasking/2021-01-13-进程和线程对比.md
@@ -1,3 +1,18 @@
+---
+layout:     post
+title:      多任务编程
+subtitle:   进程和线程对比
+date:       2021-01-13
+author:     BB
+header-img: img/pythonPro.jpg
+catalog: true
+tags:
+    - python
+    - multitasking
+---
+
+
+
 进程和线程的对比
 ================
 
