--- a/_posts/03Multitasking/2021-01-04-获取进程编号.md
+++ b/_posts/03Multitasking/2021-01-04-获取进程编号.md
@@ -1,3 +1,19 @@
+---
+layout:     post
+title:      多任务编程
+subtitle:   获取进程编号
+date:       2021-01-04
+author:     BB
+header-img: img/pythonPro.jpg
+catalog: true
+tags:
+    - python
+    - multitasking
+    - process
+---
+
+
+
 获取进程编号
 ============
 
