--- a/_posts/03Multitasking/2021-01-06-进程的注意点.md
+++ b/_posts/03Multitasking/2021-01-06-进程的注意点.md
@@ -1,3 +1,18 @@
+---
+layout:     post
+title:      多任务编程
+subtitle:   进程的注意点
+date:       2021-01-06
+author:     BB
+header-img: img/pythonPro.jpg
+catalog: true
+tags:
+    - python
+    - multitasking
+    - process
+---
+
+
 进程的注意点
 ============
 
