--- a/_posts/03Multitasking/2021-01-10-线程的注意点.md
+++ b/_posts/03Multitasking/2021-01-10-线程的注意点.md
@@ -1,3 +1,19 @@
+---
+layout:     post
+title:      多任务编程
+subtitle:   线程的注意点
+date:       2021-01-10
+author:     BB
+header-img: img/pythonPro.jpg
+catalog: true
+tags:
+    - python
+    - multitasking
+    - thread
+---
+
+
+
 线程的注意点
 ============
 
