--- a/_posts/03Multitasking/2021-01-11-互斥锁的使用.md
+++ b/_posts/03Multitasking/2021-01-11-互斥锁的使用.md
@@ -1,3 +1,18 @@
+---
+layout:     post
+title:      多任务编程
+subtitle:   互斥锁
+date:       2021-01-11
+author:     BB
+header-img: img/pythonPro.jpg
+catalog: true
+tags:
+    - python
+    - multitasking
+---
+
+
+
 互斥锁
 ======
 
